[tool.poetry]
name = "toolong"
version = "1.1.3"
description = "A terminal log file viewer / tailer / analyzer"
authors = ["Will McGugan <will@textualize.io>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/textualize/toolong"
repository = "https://github.com/textualize/toolong"
documentation = "https://github.com/textualize/toolong"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
textual = "^0.50.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
textual-dev = "^1.4.0"

[tool.poetry.scripts]
tl = "toolong.cli:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

